<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.colorpicker.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.colorpicker.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_colorPicker"
        android:name="com.example.colorpicker.ui.picker.PickerFragment"
        android:label="@string/title_colorPicker"
        tools:layout="@layout/fragment_picker" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.colorpicker.ui.settings.SettingsFragment"
        android:label="@string/title_settings_page"
        tools:layout="@layout/settings_page" />

</navigation>