<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ImageUpload"
    tools:showIn="@layout/activity_image_upload">

    <TextView
        android:id="@+id/IU_Title"
        android:layout_width="215dp"
        android:layout_height="45dp"
        android:text="@string/title_imageupload"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/IU_Desc"
        android:layout_width="310dp"
        android:layout_height="66dp"
        android:layout_marginTop="36dp"
        android:text="@string/text_explanation"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IU_Title"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Btn_Select_Photo"
        android:layout_width="243dp"
        android:layout_height="59dp"
        android:layout_marginTop="36dp"
        android:text="@string/text_button_upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IU_Desc" />

    <ImageView
        android:id="@+id/IV_selected_image"
        android:layout_width="341dp"
        android:layout_height="250dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="148dp"
        android:contentDescription="@string/content_desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />
</androidx.constraintlayout.widget.ConstraintLayout>